--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/tpdaos2024?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123321
+spring.datasource.password=
 logging.level.org.hibernate.SQL=debug
+spring.jackson.serialization.fail-on-empty-beans=false
